--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,10 @@
     },
     "dependencies": {
         "body-parser": "^1.20.3",
-        "ejs": "^3.1.10"
+        "ejs": "^3.1.10",
+        "mysql2": "^3.11.5",
+        "sequelize": "^6.37.5",
+        "sequelize-cli": "^6.6.2",
+        "sqlite3": "^5.1.7"
     }
 }
